rubocop/examples/good/Style_Semicolon.rb
# Don't use ; to separate statements and expressions.
#   As a corollary - use one expression per line.

# good
puts 'foobar'

puts 'foo'
puts 'bar'

puts 'foo', 'bar' # this applies to puts in particular
