rubocop/examples/bad/Style_Semicolon.rb
# Don't use ; to separate statements and expressions.
#   As a corollary - use one expression per line.

# bad
puts 'foobar'; # superfluous semicolon

puts 'foo'; puts 'bar' # two expressions on the same line
